--- a/src/app/garage/components/garage-root/garage-root.component.html
+++ b/src/app/garage/components/garage-root/garage-root.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <h1>This is garage App</h1>
+  <h1>Garage App</h1>
   <div class="row">
     <app-create-car></app-create-car>
+    <app-car-collection [carCollection]='carCollection'></app-car-collection>
   </div>
 </div>
