--- a/src/app/car/components/create-car/create-car.component.html
+++ b/src/app/car/components/create-car/create-car.component.html
@@ -8,6 +8,6 @@
       <label for="description">Description</label>
       <input type="text" class="form-control" id="description" [(ngModel)]="model.description" [ngModelOptions]="{standalone: true}">
     </div>
-    <button type="submit" class="btn btn-default">Save</button>
+    <button type="submit" class="btn btn-default" (click)="save(model)">Save</button>
   </form>
 </div>
